@@ -172,4 +172,5 @@ TODO!!! FileManager: Corrected issue with 'auto-summary' fix (usage of wrong bit
 - Fixed 'RegexNamespaceContext' for it to be more friendly with other extensions (e.g. AddScriptCss)
 - Fixed 'ExtensionClass' for increased integration around 'ParserAfterTidy' hook
 - Enhanced 'StubManager' to cover all required stubbing cases (tags, magic words etc.)
--
+- Moved 'addtohead' tag functionality from SecureHTML to AddScriptCss
+- 
